# BitFun

./: .gitignore  ACKNOWLEDGMENTS.md  Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
BitFun-Installer/: package-lock.json  package.json
docs/: external-reference-code-map.md
docs/architecture/: agent-runtime-services-design.md  agent-sdk-product-architecture.md  cli-product-line-design.md  deep-review.md  product-architecture.md  remote-workspace-transport.md  review-lifecycle.md
docs/architecture/extensions/: capability-runtime-integration-design.md  external-ai-work-sources-design.md
docs/features/: remote-workspaces.md
docs/methodology/: web-coding-workflow.md
docs/plans/: opencode-extension-compatibility-plan.md
docs/sdlc-harness/: design.md  implementation-plan.md  product-requirements-agent-workflow-adjustment.md  product-requirements.md  traceability-matrix.md
scripts/: cargo-target-gc.mjs  migrate-taiji.ps1
scripts/core-boundaries/: self-test.mjs
scripts/core-boundaries/rules/: feature-rules.mjs
scripts/core-boundaries/rules/source/: forbidden-rules.mjs  public-api-rules.mjs  required-rules.mjs
src/apps/cli/src/: actions.rs  chat_state.rs
src/apps/cli/src/agent/: core_adapter.rs  mod.rs
src/apps/cli/src/modes/: chat.rs  exec.rs
src/apps/cli/src/peer_host/: state.rs
src/apps/cli/src/runtime/: approval.rs
src/apps/cli/src/ui/: command_menu.rs  permission.rs  startup.rs
src/apps/desktop/: Cargo.toml
src/apps/desktop/src/: lib.rs
src/apps/desktop/src/api/: agentic_api.rs  browser_api.rs  external_sources_api.rs  mod.rs  remote_workspace_policy.rs  ssh_api.rs  tool_api.rs
src/apps/server/src/: rpc_dispatcher.rs
src/crates/adapters/: AGENTS.md
src/crates/adapters/claude-code-adapter/src/: agent_source.rs  command_source.rs  mcp_source.rs
src/crates/adapters/claude-code-adapter/tests/: command_source.rs  mcp_source.rs  subagent_source.rs
src/crates/adapters/codex-adapter/src/: agent_source.rs  mcp_source.rs
src/crates/adapters/codex-adapter/tests/: mcp_source.rs  subagent_source.rs
src/crates/adapters/opencode-adapter/src/: command_source.rs  mcp_source.rs
src/crates/adapters/opencode-adapter/tests/: opencode_command_adapter.rs  opencode_mcp_adapter.rs
src/crates/adapters/static-hook-support/: Cargo.toml
src/crates/adapters/static-hook-support/src/: lib.rs
src/crates/assembly/core/: Cargo.toml
src/crates/assembly/core/src/: external_sources.rs  product_runtime.rs  service_agent_runtime.rs
src/crates/contracts/product-domains/: Cargo.toml
src/crates/contracts/runtime-ports/: Cargo.toml
src/crates/services/services-core/: Cargo.toml
src/crates/taiji/: THIRD_PARTY_NOTICES.md
src/crates/taiji/taiji-abnormal/: Cargo.toml
src/crates/taiji/taiji-backtest/: Cargo.toml
src/crates/taiji/taiji-cli/: Cargo.toml
src/crates/taiji/taiji-dvmi/: Cargo.toml  README.md
src/crates/taiji/taiji-dvmi/src/: lib.rs
src/crates/taiji/taiji-engine/: Cargo.toml
src/crates/taiji/taiji-executor/: Cargo.toml
src/crates/taiji/taiji-growth/: Cargo.toml
src/crates/taiji/taiji-llm/: Cargo.toml
src/crates/taiji/taiji-llm/src/: lib.rs
src/crates/taiji/taiji-llm/src/provider/: claude.rs  deepseek.rs  mod.rs  openai.rs
src/crates/taiji/taiji-magnet/: Cargo.toml  README.md
src/crates/taiji/taiji-magnet/src/: lib.rs
src/crates/taiji/taiji-publisher/: Cargo.toml
src/crates/taiji/taiji-risk/: Cargo.toml  README.md
src/crates/taiji/taiji-risk/src/: lib.rs
src/crates/taiji/taiji-sentiment/: Cargo.toml
src/crates/taiji/taiji-thrust/: Cargo.toml  README.md
src/crates/taiji/taiji-thrust/src/: lib.rs
src/mobile-web/: package-lock.json  package.json
src/mobile-web/src/i18n/: messages.ts
src/mobile-web/src/pages/: ChatPage.tsx
src/mobile-web/src/services/: store.ts
src/web-ui/: package.json
src/web-ui/src/: main.tsx
tests/e2e/: package-lock.json
(+167 files in other folders)
