[package]
name = "taiji-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM client abstraction — OpenAI / Claude / DeepSeek providers with structured output parsing"

[lib]
name = "taiji_llm"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
candle-core = { workspace = true, optional = true }

[features]
default = []
candle = ["candle-core"]

[lints]
workspace = true
