[package]
name = "taiji-thrust"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Three-push counting engine (ref: smc-toolkit MIT)"

[lib]
name = "taiji_thrust"
crate-type = ["rlib"]

[dependencies]
taiji-engine = { path = "../taiji-engine" }
chrono = { workspace = true }
serde_json = "1"

[lints]
workspace = true
